--- a/data/style.css
+++ b/data/style.css
@@ -1,8 +1,93 @@
-body {
-	font-family: Arial, Helvetica, sans-serif;
-	background: #eee;
+* {
+    list-style: none;
+    text-decoration: none;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-#fslist {
+body {
+	background: #ddd;
+    font-family: Arial, 'Open Sans', sans-serif;
+}
+
+p {
+    margin: 16px 0;
+}
+
+.mono {
 	font-family: monospace;
+}
+
+.container {
+    display: grid;
+    grid-template-areas: 'menu header' 'menu content';
+    grid-template-columns: 192px auto;
+    grid-template-rows: min-content 1fr;
+    min-height: 100vh;
+    gap: 10px;
+    padding: 0px;
+}
+
+.sidebar {
+    grid-area: menu;
+    background: rgb(5, 68, 104);
+}
+
+.header {
+    grid-area: header;
+    display: flex;
+    justify-content: center;
+    padding-top: 1em;
+}
+
+.content {
+    grid-area: content;
+    padding: 1em;
+}
+
+.sidebar ul li a {
+	display: block;
+	padding: 12px 16px;
+	border-bottom: 1px solid #10558d;
+	color: rgb(241, 237, 237);
+	font-size: 16px;
+	position: relative;
+}
+
+.sidebar ul li a .icon {
+	color: #dee4ec;
+	display: inline-block;
+	padding-right: 4px;
+}
+
+.sidebar ul li a:hover,
+.sidebar ul li a.active{
+    color: #0c7db1;
+
+    background:white;
+    border-right: 2px solid rgb(5, 68, 104);
+}
+
+.sidebar ul li a:hover .icon,
+.sidebar ul li a.active .icon {
+    color: #0c7db1;
+}
+
+.littlefs-image {
+	background-image: url(LittleFS_Logo.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: 36px;
+	width: 36px;
+	margin-right: 8px;
+}
+
+.wifi-image {
+	background-image: url(WiFi_Logo.svg);
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: 52px;
+	width: 52px;
+	margin-right: 8px;
 }
